syntax = "proto3";
package proto;

option go_package = "github.com/grantlerduck/go-was-lambda-dyanmo/domain/bookingpb";

message Event {
  string booking_id = 1;
  string user_id = 2;
  int64 from_epoch_millis = 3;
  int64 to_epoch_millis = 4;
  string hotel_name = 5;
  string flight_id = 6;
  string airline_name = 7;
  State booking_state = 8;
}

enum State {
  unknown = 0;
  unconfirmed = 1;
  confirmed = 2;
  payment_received = 3;
  payment_pending = 4;
  planned = 5;
  canceled = 6;
  checked_in = 7;
  checked_out = 8;
  review_pending = 9;
  reviewed = 10;
}